post LEGA: SID-3 CAL update (tentative)

--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/1"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/4"
    ]
   },
   {
@@ -83,8 +83,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 1                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]   0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -106,8 +106,8 @@
    "source": [
     "RIME_mode = 0                           # [RIME rejection]  0: n/a  1: RIME reject\n",
     "RFI_mode  = 0                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
-    "f_min     = 0                           # [Frequency sel]   max - min\n",
-    "f_max     = 50000                       # [Frequency sel]   max - min"
+    "f_min     = 1000                        # [Frequency sel]   max - min\n",
+    "f_max     = 10000                       # [Frequency sel]   max - min"
    ]
   },
   {
@@ -151,13 +151,13 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = [#'SID23_20231024-0011.cdf',\n",
     "                  'SID23_20231024-0024.cdf',    # 0/0/10mVpp \n",
     "                  'SID23_20231024-0034.cdf',    # 0/0/10mVpp\n",
     "                 ]\n",
-    "\"\"\"\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID23_Seq07.cdf',\n",
@@ -530,7 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = np.int16(n_time0/2)\n",
+    "n_sweep = n_time0//2\n",
     "n_block = n_block0\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.N_block[0])\n",
     "\n",
@@ -575,7 +575,7 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_block = 2\n",
+    "n_block = 0\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
@@ -593,6 +593,7 @@
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax3.set_xlabel(date)\n",
     "\n",
     "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
+    "# xlim=[0.002, 0.003]; ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)   # 0.28msec\n",
     "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
     "# xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)];  ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
@@ -650,7 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_spec.hf_getspec_sid23(data, band_mode)"
+    "spec = juice_spec.hf_getspec_sid23(data)"
    ]
   },
   {
@@ -972,6 +973,7 @@
    "source": [
     "n_sweep = 0;  f_min = spec.freq[n_sweep][0][0];  f_max = spec.freq[n_sweep][0][-1]; d_freq = spec.freq[n_sweep][0][1]-spec.freq[n_sweep][0][0]\n",
     "p_min = p_min1-2;  p_max = p_max1\n",
+    "p_min = -15;       p_max = -12\n",
     "\n",
     "freq_1d = spec.freq[n_time0//2][0]\n",
     "#\n",
