--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/2"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/4"
    ]
   },
   {
@@ -85,9 +85,9 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -109,15 +109,13 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.2 ***\n",
-    "\"\"\"\n",
     "# 202401\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',     # 128   CAL\n",
     "                 ]\n",
-    "\"\"\"\n",
     "# 202408\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
-    "data_name_list = [#'JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
     "                  'JUICE_L1a_RPWI-HF-SID2_20240822T023715_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
@@ -132,12 +130,12 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'\n",
     "data_name_list = [#'SID02_20231007-0349.cdf',                           # SG - 1.0MHz 10mVpp 90/0/0deg\n",
     "                  'SID02_20231117-1607.cdf',                            # SG - 1.5MHz 10mVpp 90/0/0deg \n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_name_list = ['SID02-high_20231019-1749.cdf',\n",
     "                  'SID02-high_20231020-1218.cdf',\n",
     "                  'SID02-high_20231020-1222.cdf',\n",
@@ -222,16 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2549c0b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data.epoch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
@@ -298,7 +286,11 @@
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
     "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
     "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
-    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)"
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
+    "if unit_mode==0:\n",
+    "    print(\"Peak Eu:\", '{:x}'.format(np.int64(np.amax(wave.Eu_i))), ' {:x}'.format(np.int64(np.amax(wave.Eu_q))), wave.str)\n",
+    "    print(\"Peak Ev:\", '{:x}'.format(np.int64(np.amax(wave.Ev_i))), ' {:x}'.format(np.int64(np.amax(wave.Ev_q))), wave.str)\n",
+    "    print(\"Peak Ew:\", '{:x}'.format(np.int64(np.amax(wave.Ew_i))), ' {:x}'.format(np.int64(np.amax(wave.Ew_q))), wave.str)"
    ]
   },
   {
@@ -443,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_spec.hf_getspec_sid2(data, cal_mode)                       # Wave -> Spectrum"
+    "spec = juice_spec.hf_getspec_sid2(data)                       # Wave -> Spectrum"
    ]
   },
   {
@@ -455,7 +447,8 @@
    "source": [
     "spec = juice_cal.spec_cal(spec, 2, unit_mode, band_mode, T_HF, T_RWI)   # CAL\n",
     "spec = juice_spec.hf_getspec_angle(spec)                                # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters "
+    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters \n",
+    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw"
    ]
   },
   {
@@ -473,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if gap_mode == 1:\n",
+    "if gap_mode == 1 and time_mode == 0:\n",
     "    for i in range(n_time0-1):\n",
     "        if data.scet[i+1]-data.scet[i] > 60:\n",
     "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
@@ -511,7 +504,11 @@
     "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
     "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "if unit_mode==0:\n",
+    "    peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EuEu:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EvEv:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EwEw:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))"
    ]
   },
   {
@@ -570,6 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "EE_2d      = spec.EE.transpose();       EE_med      = np.nanmedian(spec.EE,      axis=0)\n",
     "EuEu_2d    = spec.EuEu.transpose();     EuEu_med    = np.nanmedian(spec.EuEu,    axis=0)\n",
     "EvEv_2d    = spec.EvEv.transpose();     EvEv_med    = np.nanmedian(spec.EvEv,    axis=0)\n",
     "EwEw_2d    = spec.EwEw.transpose();     EwEw_med    = np.nanmedian(spec.EwEw,    axis=0)\n",
@@ -591,23 +589,14 @@
     "E_PHAuv_2d = spec.E_PHAuv.transpose();  E_PHAuv_med = np.nanmedian(spec.E_PHAuv, axis=0)\n",
     "E_PHAvw_2d = spec.E_PHAvw.transpose();  E_PHAvw_med = np.nanmedian(spec.E_PHAvw, axis=0)\n",
     "E_PHAwu_2d = spec.E_PHAwu.transpose();  E_PHAwu_med = np.nanmedian(spec.E_PHAwu, axis=0)\n",
-    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw; EE_med = np.nanmedian(spec.EE,     axis=0)\n",
     "\n",
     "p_max1 = p_raw_max + spec.cf/10;  p_min1 = p_raw_min + spec.cf/10\n",
-    "p_max1 = np.ceil(np.log10(np.amax([np.amax(spec.EuEu), np.amax(spec.EvEv), np.amax(spec.EwEw)]))*5)/5\n",
+    "# p_max1 = np.ceil(np.log10(np.amax([np.amax(spec.EuEu), np.amax(spec.EvEv), np.amax(spec.EwEw)]))*5)/5\n",
     "print(spec.str, \"[EE]\", spec.EuEu.shape, \"[frequency]\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_w_1d[0], \"kHz)\")\n",
     "print(\"unit_mode:\", unit_mode, \"  conversion factor:\", '{:.1f}'.format(spec.cf), \"[wave:\", '{:.1f}'.format(wave.cf),\n",
     "      \"]  MAX-min:\", '{:.1f}'.format(p_max1), '{:.1f}'.format(p_min1), \n",
     "      \"  T-HF & T-RWI:\", T_HF, \"(\", data.T_HF_FPGA[n_time0//2], \")\", T_RWI, \"(\", data.T_RWI_CH1[n_time0//2], \")\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4283fe8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -736,22 +725,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "681289e5",
-   "metadata": {},
-   "source": [
-    "### GAP: fill NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89979028",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a8410824",
@@ -866,10 +839,10 @@
     "if time_mode == 1:\n",
     "    xlim=[num_1d[0],   num_1d[-1]];   ax10.set_xlim(xlim)\n",
     "else:\n",
-    "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    # E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    # E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    # xlim=[t_min, t_max];        \n",
+    "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
     "\n",
@@ -1061,10 +1034,11 @@
    "outputs": [],
    "source": [
     "p_min = p_min1;   p_max = p_max1\n",
-    "if cal_mode == 1:\n",
-    "    p_max = p_max1+2    \n",
+    "# p_min = -5;      p_max = -0\n",
+    "# if cal_mode == 1:\n",
+    "#    p_max = p_max1+3\n",
     "f_min = f_min0;   f_max = f_max0\n",
-    "f_min = 80;       f_max = 2068\n",
+    "# f_min = 80;       f_max = 2068\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
     "\n",
@@ -1073,8 +1047,8 @@
     "ax1.plot(freq_1d,     EuEu_med, ':r', linewidth=1, label='EuEu ave')\n",
     "ax1.plot(freq_1d,     EvEv_med, ':g', linewidth=1, label='EvEv ave')\n",
     "ax1.plot(freq_1d,     EwEw_med, ':b', linewidth=1, label='EwEw ave')\n",
-    "ax1.plot(freq_1d,     EE_med,   '-y', linewidth=1,  label='EE ave')\n",
-    "ax1.plot(freq_1d_msk, EE_msk,   '-r', linewidth=1,  label='EE mask')\n",
+    "ax1.plot(freq_1d,     EE_med,   '-y', linewidth=1, label='EE ave')\n",
+    "ax1.plot(freq_1d_msk, EE_msk,   '-r', linewidth=1, label='EE mask')\n",
     "ax1.plot(mask_list[:,0], mask_list[:,2]*15*10**p_min, '.r', label='mask')\n",
     "ax1.set_yscale('log')\n",
     "if f_mode == 1:\n",
