--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/9/1"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/9/4"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_spec.hf_getspec_sid2(data, cal_mode)                       # Wave -> Spectrum\n",
+    "spec = juice_spec.hf_getspec_sid2(data)                       # Wave -> Spectrum\n",
     "\n",
     "Epoch_1d  = spec.epoch.tolist();    n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
     "freq_1d   = spec.freq[n_time1//2];  n_freq0 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
