--- a/JUICE-CDF-HF-geometry.ipynb
+++ b/JUICE-CDF-HF-geometry.ipynb
@@ -210,9 +210,9 @@
     "ax1.set_ylabel('colatitude (deg)');  ax2.set_ylabel('sin(colat');  ax3.set_ylabel('D-longitude (deg)');  ax4.set_ylabel('longitude (deg)');  ax5.set_ylabel('radius (km)')\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "E_min1 = '2024-08-23 04:00:00';  t_min1 = datetime.datetime.strptime(E_min1, \"%Y-%m-%d %H:%M:%S\")\n",
-    "E_max1 = '2024-08-23 06:00:00';  t_max1 = datetime.datetime.strptime(E_max1, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min1, t_max1]\n",
-    "xlim=[data.epoch[0], data.epoch[-1]];  \n",
+    "E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "# xlim=[data.epoch[0], data.epoch[-1]];  \n",
     "ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim);  ax5.set_xlim(xlim)\n",
     "ylim=[   0, 180];                      ax1.set_ylim(ylim)\n",
     "ylim=[-0.1, 1.1];                      ax2.set_ylim(ylim)\n",
