--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/1"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/4"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
@@ -117,17 +117,17 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.2 ***\n",
-    "# 20240126\n",
+    "\"\"\"\n",
+    "# 202401\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',     # 128   CAL\n",
     "                 ]\n",
+    "\"\"\"\n",
     "# 202408\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
     "                  'JUICE_L1a_RPWI-HF-SID2_20240822T023715_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "\"\"\""
+    "                 ]\n"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_spec.hf_getspec_sid2(data, cal_mode)                       # Wave -> Spectrum\n",
+    "spec = juice_spec.hf_getspec_sid2(data)                       # Wave -> Spectrum\n",
     "\n",
     "Epoch_1d  = spec.epoch.tolist();    n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
     "freq_1d   = spec.freq[n_time1//2];  n_freq0 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
@@ -557,6 +557,51 @@
     "    png_fname = work_dir+data_name+'-cal_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'-cal_spec-log.png'\n",
+    "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "608760c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
+    "f_min = f_min0;  f_max = f_max0\n",
+    "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = -7;  p_max = -2\n",
+    "\n",
+    "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
+    "ax1.plot(freq_1d, EE_med  ,      '-y',  linewidth=4.0, label='EE_med')\n",
+    "ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
+    "ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
+    "ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=2.0, label='EwEw_med')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n0], ':r',  linewidth=1.0, label='uu init')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n0], ':g',  linewidth=0.8, label='vv init')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n0], ':b',  linewidth=0.6, label='ww init')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n2], '-r',  linewidth=1.0, label='uu end')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n2], '-g',  linewidth=0.8, label='vv end')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n2], '-b',  linewidth=0.6, label='ww end')\n",
+    "ax1.set_yscale('log')\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_xscale('log')\n",
+    "\n",
+    "ax1.set_ylabel(spec.str); ax1.set_xlabel('frequency [Hz]')\n",
+    "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S');  title_date = \"[\" + data_name + \"]  \" + date2;  ax1.set_title(title_date)\n",
+    "ax1.legend(loc='upper right', fontsize=8)\n",
+    "\n",
+    "xlim=[f_min, f_max];          ax1.set_xlim(xlim)\n",
+    "ylim=[10**p_min, 10**p_max];  ax1.set_ylim(ylim)\n",
+    "\n",
+    "fig.subplots_adjust(hspace=0);  fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
     "    fig.savefig(png_fname)"
    ]
   },
@@ -779,7 +824,7 @@
     "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    # E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    # E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    # xlim=[t_min, t_max];        \n",
+    "    # xlim=[t_min, t_max]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
     "\n",
@@ -1144,7 +1189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cal_test = 0"
+    "cal_test = 1"
    ]
   },
   {
@@ -1182,8 +1227,11 @@
     "    fig = plt.figure(figsize=(14, 8))\n",
     "    ax1 = fig.add_subplot(2, 1, 1);  ax2 = fig.add_subplot(2, 1, 2);  \n",
     "\n",
-    "    # CAL_gain = juice_cal.spec_gain_onboard_cal(freq)\n",
-    "    # ax1.plot(freq, CAL_gain,       '.k',  label='CAL linw', linewidth=0.3)\n",
+    "    # Harness loss \n",
+    "    CAL_gain = juice_cal.spec_gain_onboard_cal(freq)\n",
+    "    ax1.plot(freq, CAL_gain,       '.k',  label='CAL linw', linewidth=0.3)\n",
+    "    # Harness loss \n",
+    " \n",
     "    CAL_f_gain, CAL_f_phase = juice_cal.spec_gain_phase(freq, 1, T_HF, T_RWI)\n",
     "    ax1.plot(freq, CAL_f_gain[0],  '--r', label='ADC [U]', linewidth=0.3)\n",
     "    ax1.plot(freq, CAL_f_gain[1],  '--g', label='ADC [V]', linewidth=0.3)\n",
