--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/9/2"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/9/4"
    ]
   },
   {
@@ -85,13 +85,13 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
-    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
+    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
     "# f_mode_min = 3000;  f_mode_max = 10000  # 80 - 2068 : SID-4/20\n",
     "# *** Power range ***\n",
@@ -119,9 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
-    "E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
-    "t_min = 0;  t_max = 0"
+    "E_min = '2024-08-19 20:30:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_max = '2024-08-19 20:40:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
+    "# t_min0 = 0;  t_max0 = 0"
    ]
   },
   {
@@ -145,12 +145,10 @@
     "sid = 4;    data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240706T121439_V01.cdf']\n",
     "sid = 20;   data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240706T121424_V01.cdf']\n",
     "\"\"\"\n",
-    "\"\"\"\n",
     "# 202408 -- CO2\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/19/'\n",
     "sid = 4;    data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240819T203025_V01.cdf']\n",
-    "sid = 20;   data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240819T203013_V01.cdf']\n",
-    "\"\"\""
+    "sid = 20;   data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240819T203013_V01.cdf']"
    ]
   },
   {
@@ -161,6 +159,7 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'\n",
     "sid = 4\n",
@@ -173,6 +172,7 @@
     "                  #'SID20-comp0-20231117-1529.cdf',          # 10/10/0mVpp, 0/90/0deg\n",
     "                  'SID20-comp1-20231117-1532.cdf',          # 10/10/0mVpp, 0/90/0deg\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'\n",
@@ -192,6 +192,8 @@
     "                  'SID20_Seq19.cdf',\n",
     "                  'SID20_Seq20.cdf',\n",
     "                  ]\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
     "# 202312 -- Checkout\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'\n",
     "sid = 4;   data_name_list = ['SID4_RPWI_NEWv2_SCI.cdf']\n",
@@ -551,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if gap_mode == 1:\n",
+    "if gap_mode == 1 and time_mode == 0:\n",
     "    for i in range(n_time0-1):\n",
     "        if data.scet[i+1]-data.scet[i] > 60:\n",
     "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
@@ -597,7 +599,11 @@
     "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))\n",
     "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))"
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))\n",
+    "if unit_mode==0:\n",
+    "    peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EuEu:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EvEv:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EwEw:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))"
    ]
   },
   {
@@ -610,25 +616,25 @@
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Mid   peak - {n_sweep2}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Last  peak - {n_sweep3}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E)\n",
-    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
+    "print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
    ]
   },
   {
@@ -795,7 +801,9 @@
    "source": [
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
     "f_min = f_min0;  f_max = f_max0\n",
+    "# f_min = f_min0;  f_max = 45000\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "#p_min = -16;     p_max = -12\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "ax1.plot(freq1, EE_med  [0:N_frequency],      '-y', linewidth=4.0, label='EE_med')\n",
@@ -816,7 +824,10 @@
     "    ax1.set_xscale('log')\n",
     "\n",
     "ax1.set_ylabel(spec.str); ax1.set_xlabel('frequency [Hz]')\n",
-    "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S');  title_date = \"[\" + data_name + \"]  \" + date2;  ax1.set_title(title_date)\n",
+    "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date);  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max]\n",
@@ -849,6 +860,7 @@
    "source": [
     "f_min = f_min0;  f_max = f_max0\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = -15.0;   p_max = -12\n",
     "num_1d = np.arange(EuEu_2d.shape[1])\n",
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
@@ -884,12 +896,12 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax4.set_xlim(xlim)\n",
     "else:\n",
-    "    if t_min==0:\n",
+    "    if t_min0==0:\n",
     "        xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "    else:\n",
-    "        E_min = '2024-08-20 20:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        E_max = '2024-08-20 23:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        xlim=[t_min, t_max]\n",
+    "        xlim=[t_min0, t_max0]\n",
+    "    #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
@@ -899,16 +911,6 @@
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
     "    fig2d.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a4444b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EE_2d"
    ]
   },
   {
@@ -945,12 +947,12 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax4.set_xlim(xlim)\n",
     "else:\n",
-    "    if t_min==0:\n",
+    "    if t_min0==0:\n",
     "        xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "    else:\n",
-    "        E_min = '2024-08-20 22:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        E_max = '2024-08-20 23:20:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        xlim=[t_min, t_max]\n",
+    "        xlim=[t_min0, t_max0]\n",
+    "    #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim)\n",
     "\n",
@@ -1030,12 +1032,12 @@
     "        xlim=[num_1d[0], num_1d[-1]]\n",
     "        ax10.set_xlim(xlim)\n",
     "    else:\n",
-    "        if t_min==0:\n",
+    "        if t_min0==0:\n",
     "            xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "        else:\n",
-    "            E_min = '2024-08-20 22:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "            E_max = '2024-08-20 23:20:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "            xlim=[t_min, t_max]\n",
+    "            xlim=[t_min0, t_max0]\n",
+    "        #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "        #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -1231,10 +1233,12 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax4.set_xlim(xlim)\n",
     "else:\n",
-    "    if t_min==0:\n",
+    "    if t_min0==0:\n",
     "        xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "    else:\n",
-    "        xlim=[t_min, t_max]\n",
+    "        xlim=[t_min0, t_max0]\n",
+    "    #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
@@ -1281,13 +1285,13 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax2.set_xlim(xlim)\n",
     "else:\n",
-    "    if t_min==0:\n",
+    "    if t_min0==0:\n",
     "        xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "    else:\n",
-    "        xlim=[t_min, t_max]\n",
+    "        xlim=[t_min0, t_max0]\n",
     "    print(\"==>\", xlim)\n",
-    "#E_min1 = '2024-08-19 21:07:00';  t_min1 = datetime.datetime.strptime(E_min1, \"%Y-%m-%d %H:%M:%S\")\n",
-    "#E_max1 = '2024-08-19 21:08:30';  t_max1 = datetime.datetime.strptime(E_max1, \"%Y-%m-%d %H:%M:%S\"); xlim=[t_min1, t_max1]\n",
+    "#E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "#E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "ax1.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.03);  plt.show()\n",
