ASW version included

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/8/26"
+    "# JUICE RPWI HF HK: QL -- 2024/9/12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +106,12 @@
     "# date='20240701'\n",
     "# date='20240702'\n",
     "# date='20240706'\n",
-    "date='20240819'\n",
+    "# date='20240819'\n",
     "# date='20240820'\n",
     "# date='20240821'\n",
     "# date='20240822'\n",
     "# date='20240823'\n",
+    "date='20240909'\n",
     "\n",
     "# Ground\n",
     "# date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
