--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/4"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/17"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "95cc75bf",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2666c932",
    "metadata": {},
    "outputs": [],
@@ -195,6 +195,21 @@
     "    else:\n",
     "        data = juice_sid2.hf_sid2_add(data, data1);   print(data.Eu_i.shape)\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e41e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -690,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a63a2c33",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2f51f234",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0de7d0c9",
    "metadata": {},
    "outputs": [],
