--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/9/1"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/9/17"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0d556f41",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3d10ac25",
    "metadata": {},
    "outputs": [],
@@ -211,6 +211,21 @@
     "        print(data.auto_corr.shape)\n",
     "\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3905bd51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
