--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/1"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/17"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -96,25 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d556f41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Ground data: Ver.2 ***\n",
-    "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
-    "data_name_list = ['SID22_20231024-0049.cdf',\n",
-    "                 ]\n",
-    "# 202310 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'    # CDF data folder\n",
-    "data_name_list = ['SID22_Seq06.cdf',\n",
-    "                 ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6212d31f",
+   "id": "6953aafe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +107,26 @@
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d556f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Ground data: Ver.2 ***\n",
+    "\"\"\"\n",
+    "# 202310 -- SAMPLE\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
+    "data_name_list = ['SID22_20231024-0049.cdf',\n",
+    "                 ]\n",
+    "# 202310 -- FS\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'    # CDF data folder\n",
+    "data_name_list = ['SID22_Seq06.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -185,6 +187,21 @@
     "        print(data.auto_corr.shape)    \n",
     "\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8009ead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
