--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/4"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/17"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -85,9 +85,9 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -210,6 +210,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5662e397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "s\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "99fa8486",
    "metadata": {},
    "outputs": [],
@@ -249,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5e1aaee",
    "metadata": {},
    "outputs": [],
@@ -461,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "98d92986",
    "metadata": {},
    "outputs": [],
@@ -479,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2cc70648",
    "metadata": {},
    "outputs": [],
@@ -882,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8c6aa899",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5edc2854",
    "metadata": {},
    "outputs": [],
@@ -1157,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "57ad12eb",
    "metadata": {},
    "outputs": [],
@@ -1599,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "d1145016",
    "metadata": {},
    "outputs": [],
@@ -1720,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "3bca480c",
    "metadata": {},
    "outputs": [],
