--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/9/4"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/9/17"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -80,8 +80,8 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3bcac391",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8dc60bee",
    "metadata": {},
    "outputs": [],
@@ -121,22 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54c3fbbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "\"\"\"\n",
-    "# 20240126\n",
+    "# 202401\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
-    "# 20240701\n",
+    "# 202407\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
     "                 ]\n",
-    "# 20240706\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
@@ -144,15 +143,16 @@
     "# 202408\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/19/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240819T202636_V01.cdf']\n",
-    "\"\"\"\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/20/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240820T180734_V01.cdf']\n",
-    "\"\"\"\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240822T095914_V01.cdf']         # all CAL\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/23/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240823T035818_V01.cdf']\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# 202408\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/09/09/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240909T093241_V01.cdf']"
    ]
   },
   {
@@ -302,11 +302,27 @@
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
     "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid3.hf_sid3_read(cdf)\n",
+    "\n",
     "    if i==0:\n",
     "        data = data1;                                print(data.EuEu.shape)\n",
     "    else:\n",
     "        data = juice_sid3.hf_sid3_add(data, data1);  print(data.EuEu.shape)\n",
     "data_name = os.path.split(data_name)[1];             print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd80009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -799,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7009340d",
    "metadata": {},
    "outputs": [],
@@ -816,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "70c23ee2",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = p_min0+1;  p_max = p_max0-2\n",
     "# p_min = -15;     p_max = -12\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
@@ -1395,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "858b40e5",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = p_min0+1.5;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
@@ -1610,7 +1626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = p_min0+1.5;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
