--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/9/1"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/9/17"
    ]
   },
   {
@@ -19,15 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import numpy as np\n",
+    "import copy\n",
+    "import datetime\n",
+    "import glob\n",
+    "import math\n",
+    "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -102,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
+    "# *** Ground Test - Ver.2 ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
     "\n",
     "# *** Ver.2 ***\n",
@@ -183,6 +187,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd3fb42b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cdflib import cdfread\n",
+    "cdf = cdfread.CDF(cdf_file)\n",
+    "globalaAttrs = cdf.globalattsget()\n",
+    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
+    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
+    "print(\"ASW:\", data.RPWI_FSW_version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
@@ -223,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e7603aea",
    "metadata": {},
    "outputs": [],
@@ -256,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0c0ac766",
    "metadata": {},
    "outputs": [],
