FSW version treatment

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/9/17"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/9/18"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
-    "# import juice_cdf_lib   as juice_cdf\n",
+    "import juice_cdf_lib   as juice_cdf\n",
     "import juice_math_lib  as juice_math\n",
     "import juice_sid21_lib as juice_sid21\n",
     "import juice_spec_lib  as juice_spec"
@@ -166,10 +166,8 @@
     "    data_name = data_name_list[i]\n",
     "    cdf_file = data_dir + data_name\n",
     "    print(i, cdf_file)\n",
-    "\n",
-    "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid21.hf_sid21_read(cdf)\n",
-    "\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid21.hf_sid21_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1\n",
     "        print(data.EuEu.shape)\n",
@@ -178,21 +176,6 @@
     "        print(data.EuEu.shape)    \n",
     "\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41d24dd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -242,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "854d0063",
    "metadata": {},
    "outputs": [],
@@ -273,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0c0ac766",
    "metadata": {},
    "outputs": [],
@@ -685,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
