--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/17"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/18"
    ]
   },
   {
@@ -226,7 +226,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid23.hf_sid23_read(cdf)\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid23.hf_sid23_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                  print(data.Eu_i.shape)\n",
     "    else:\n",
