--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/9/17"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/9/18"
    ]
   },
   {
@@ -301,28 +301,13 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid3.hf_sid3_read(cdf)\n",
-    "\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid3.hf_sid3_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                print(data.EuEu.shape)\n",
     "    else:\n",
     "        data = juice_sid3.hf_sid3_add(data, data1);  print(data.EuEu.shape)\n",
     "data_name = os.path.split(data_name)[1];             print(\"data name:\", data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fd80009",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -815,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "7009340d",
    "metadata": {},
    "outputs": [],
@@ -832,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "70c23ee2",
    "metadata": {},
    "outputs": [],
@@ -1411,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "858b40e5",
    "metadata": {},
    "outputs": [],
