--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/9/17"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/9/18"
    ]
   },
   {
@@ -260,27 +260,13 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf, sid)\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf, sid, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.EuEu.shape)\n",
     "    else:\n",
     "        data = juice_sid20.hf_sid20_add(data, data1, sid);  print(\"sid\", sid, data.EuEu.shape)\n",
     "data_name = os.path.split(data_name)[1];                    print(\"data name:\", data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18ef3521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -580,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ed75283e",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
