--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/18"
    ]
   },
   {
@@ -189,27 +189,13 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid2.hf_sid2_read(cdf)\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid2.hf_sid2_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                 print(data.Eu_i.shape)\n",
     "    else:\n",
     "        data = juice_sid2.hf_sid2_add(data, data1);   print(data.Eu_i.shape)\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4e41e8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
@@ -705,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "a63a2c33",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "2f51f234",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "0de7d0c9",
    "metadata": {},
    "outputs": [],
