--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/17"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/18"
    ]
   },
   {
@@ -175,8 +175,8 @@
     "    cdf_file = data_dir + data_name\n",
     "    print(i, cdf_file)\n",
     "\n",
-    "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid6.hf_sid6_read(cdf)\n",
+    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid6.hf_sid6_read(cdf, RPWI_FSW_version)\n",
     "\n",
     "    if i==0:\n",
     "        data = data1\n",
@@ -186,21 +186,6 @@
     "        print(data.auto_corr.shape)    \n",
     "\n",
     "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82212dda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
    ]
   },
   {
