SID2 and SID3: data and CAL update

--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/18"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/19"
    ]
   },
   {
@@ -102,9 +102,8 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf',\n",
-    "                 ]"
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
+    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf']"
    ]
   },
   {
@@ -118,13 +117,10 @@
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
-    "data_name_list = ['SID06_20231024-0049.cdf',\n",
-    "                 ]\n",
-    "\n",
+    "data_name_list = ['SID06_20231024-0049.cdf']\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'    # CDF data folder\n",
-    "data_name_list = ['SID06_Seq06.cdf',\n",
-    "                 ]\n",
+    "data_name_list = ['SID06_Seq06.cdf']\n",
     "\"\"\""
    ]
   },
