--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/18"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/19"
    ]
   },
   {
@@ -102,8 +102,8 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf',\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
+    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
