--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/18"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/19"
    ]
   },
   {
@@ -118,27 +118,25 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
     "\"\"\"\n",
     "# 202401\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'\n",
-    "data_name_list = [#'JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf',    # 1.5MHz\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf',    # 1.5MHz\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/'\n",
+    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf',    # 1.5MHz\n",
+    "                  '2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf',    # 1.5MHz\n",
     "                  ]\n",
     "# 202407 -- CO2\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf',\n",
-    "                  #'JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf',\n",
+    "data_name_list = ['2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf',\n",
+    "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf',\n",
+    "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "# 202408 -- LEGA\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/19/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20240819T210319_V01.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20240819T211916_V01.cdf',\n",
+    "data_name_list = ['2024/08/19/JUICE_L1a_RPWI-HF-SID23_20240819T210319_V01.cdf',\n",
+    "                  '2024/08/19/JUICE_L1a_RPWI-HF-SID23_20240819T211916_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20240822T024109_V01.cdf',\n",
+    "data_name_list = ['2024/08/22/JUICE_L1a_RPWI-HF-SID23_20240822T024109_V01.cdf',\n",
     "                 ]\n",
     "\"\"\""
    ]
