--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/9/18"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/9/22"
    ]
   },
   {
@@ -19,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
     "import copy\n",
-    "import glob\n",
+    "import csv\n",
+    "import datetime\n",
+    "import math\n",
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -43,14 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6c181f65",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The latest CDF library https://spdf.gsfc.nasa.gov/pub/software/cdf/dist/latest/\n",
     "from spacepy import pycdf\n",
-    "\n",
     "import os\n",
     "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
@@ -58,6 +58,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
+    "import juice_sid2_data as juice_data\n",
     "import juice_sid2_lib  as juice_sid2\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "0e4d518e",
    "metadata": {},
    "outputs": [],
@@ -81,9 +82,9 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -113,23 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9abc83b",
+   "execution_count": 36,
+   "id": "1eebed95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Flight - Ver.2 ***\n",
-    "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',     # 128   CAL\n",
-    "                 ]\n",
-    "# 202408\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
-    "                  'JUICE_L1a_RPWI-HF-SID2_20240822T023715_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "\"\"\""
+    "E_min = '2024-08-19 21:05:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_max = '2024-08-19 21:10:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
+    "t_min0 = 0;  t_max0 = 0"
    ]
   },
   {
@@ -139,6 +131,24 @@
    "metadata": {},
    "source": [
     "# get CDF data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5a1206f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date='20230419'\n",
+    "date='20230530'   # CAL\n",
+    "# date='20230601'\n",
+    "# date='20230712'\n",
+    "# date='20230713'\n",
+    "# date='20240125'\n",
+    "# date='20240822'   # CAL\n",
+    "# date='0'\n",
+    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -158,10 +168,10 @@
     "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
     "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid2.hf_sid2_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
-    "        data = data1;                               print(data.Eu_i.shape)\n",
+    "        data = data1;                                print(data.Eu_i.shape)\n",
     "    else:\n",
-    "        data = juice_sid2.hf_sid2_add(data, data1); print(data.Eu_i.shape)\n",
-    "data_name = os.path.split(data_name)[1];            print(\"data name:\", data_name)"
+    "        data = juice_sid2.hf_sid2_add(data, data1);  print(data.Eu_i.shape)\n",
+    "data_name = os.path.split(data_name)[1];             print(\"data name:\", data_name)"
    ]
   },
   {
@@ -183,16 +193,23 @@
    "source": [
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2;      print(str_date)\n",
-    "\n",
+    "str_date = date1 + \"  -  \" + date2\n",
     "n_time0 = data.Eu_i.shape[0];      n_freq0 = data.Eu_i.shape[1];  n_samp0 = data.Eu_i.shape[2]\n",
-    "f_min1  = data.frequency[0][0][0]; f_max1 = (max(np.ravel(data.frequency)))\n",
+    "f_min1  = data.frequency[0][0][0]; f_max1  = max(np.ravel(data.frequency))\n",
     "N_ch0   = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "\n",
-    "print(\"data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0, \"]\")\n",
-    "print(\"Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
-    "print(\"Frequency, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")"
+    "print(\"       date and time:\", str_date)\n",
+    "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0, \"]\")\n",
+    "print(\"         Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
+    "print(\"f, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
+    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
+    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
+    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
+    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
+    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
+    "\n",
+    "#\n",
+    "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")"
    ]
   },
   {
@@ -207,17 +224,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba6be60e",
+   "id": "692f4a2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
-    "if T_HF  > 75 or T_HF < -25:\n",
-    "   T_HF  = 25\n",
-    "if T_RWI > 75 or T_RWI < -180:\n",
-    "   T_RWI = 25\n",
+    "if T_HF  > 199 or T_HF  < -50  or math.isnan(T_HF):\n",
+    "   T_HF  = 25;  data.T_HF_FPGA[:] = math.nan\n",
+    "if T_RWI > 199 or T_RWI < -199 or math.isnan(T_RWI):\n",
+    "   T_RWI = 25;  data.T_RWI_CH1[:] = math.nan;  data.T_RWI_CH2[:] = math.nan\n",
+    "\n",
+    "print(\"Temperature: \", 'HF - {:.1f}'.format(T_HF), '  RWI1 - {:.1f}'.format(T_RWI))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba6be60e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wave = juice_cal.wave_cal(data, 2, unit_mode, T_HF, T_RWI)\n",
     "p_max0 = p_raw_max + wave.cf/10;     p_min0 = p_raw_min + wave.cf/10\n",
+    "p_max0 = np.ceil(np.log10( np.nanmax( [np.nanmax(wave.Eu_i), np.nanmax(wave.Ev_i), np.nanmax(wave.Ew_i), np.nanmax(wave.Eu_q), np.nanmax(wave.Ev_q), np.nanmax(wave.Ew_q)] ) )*5)/5+.5\n",
     "\n",
     "print(\"unit_mode:\", unit_mode, \"  conversion factor:\", '{:.1f}'.format(wave.cf), \n",
     "      \"  MAX-min:\", '{:.1f}'.format(p_max0), '{:.1f}'.format(p_min0), \"  str_unit:\", wave.str, \n",
@@ -386,11 +415,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_spec.hf_getspec_sid2(data)                       # Wave -> Spectrum\n",
+    "spec = juice_spec.hf_getspec_sid2  (data)                               # Wave -> Spectrum\n",
+    "spec = juice_cal.spec_cal(spec, 2, unit_mode, band_mode, T_HF, T_RWI)   # CAL\n",
+    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw\n",
     "\n",
-    "Epoch_1d  = spec.epoch.tolist();    n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
-    "freq_1d   = spec.freq[n_time1//2];  n_freq0 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
-    "freq_w_1d = spec.freq_w[n_time1//2]"
+    "Epoch_1d  = spec.epoch.tolist();      n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
+    "freq_1d   = spec.freq  [n_time1//2];  n_freq1 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
+    "freq_w_1d = spec.freq_w[n_time1//2]\n",
+    "print(\"f (kHz):\", f_min0,  \"-\", f_max0, \"  width (kHz):\",  freq_w_1d[0], \"-\", freq_w_1d[-1])\n",
+    "\n",
+    "# NAN\n",
+    "if gap_mode == 1 and time_mode == 0:\n",
+    "    for i in range(n_time1-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            juice_sid2.hf_sid2_spec_nan(data, i);   juice_sid2.hf_sid2_spec_nan(data, i+1)\n",
+    "\n",
+    "spec = juice_spec.hf_getspec_angle (spec)                               # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee33e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_max0 = p_raw_max + spec.cf/10;  p_min0 = p_raw_min + spec.cf/10\n",
+    "p_max0 = np.ceil(np.log10( np.nanmax( [np.nanmax(spec.EuEu), np.nanmax(spec.EvEv), np.nanmax(spec.EwEw)] ) )*5)/5+.5\n",
+    "p_min0 = np.ceil(np.log10( np.nanmin( [np.nanmin(spec.EuEu), np.nanmin(spec.EvEv), np.nanmin(spec.EwEw)] ) )*5)/5-.5\n",
+    "p_max  = p_max0;                  p_min  = p_min0\n",
+    "print(\"conversion factor:\", '{:.1f}'.format(spec.cf), \"    MAX-min:\", '{:.1f}'.format(p_max), '({:.1f})'.format(p_max0), '{:.1f}'.format(p_min), '({:.1f})'.format(p_min0), \"   str_unit:\", spec.str)"
    ]
   },
   {
@@ -400,10 +456,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = juice_cal.spec_cal(spec, 2, unit_mode, band_mode, T_HF, T_RWI)   # CAL\n",
-    "spec = juice_spec.hf_getspec_angle(spec)                           # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec)                          # Stokes and Polarization Parameters \n",
-    "\n",
     "EuEu_2d    = spec.EuEu.transpose();     EuEu_med    = np.nanmedian(spec.EuEu,    axis=0)\n",
     "EvEv_2d    = spec.EvEv.transpose();     EvEv_med    = np.nanmedian(spec.EvEv,    axis=0)\n",
     "EwEw_2d    = spec.EwEw.transpose();     EwEw_med    = np.nanmedian(spec.EwEw,    axis=0)\n",
@@ -427,11 +479,21 @@
     "E_PHAwu_2d = spec.E_PHAwu.transpose();  E_PHAwu_med = np.nanmedian(spec.E_PHAwu, axis=0)\n",
     "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw;  EE_med = EuEu_med  + EvEv_med  + EwEw_med\n",
     "\n",
-    "p_max1 = p_raw_max + spec.cf/10; p_min1 = p_raw_min + spec.cf/10\n",
+    "p_max1 = p_raw_max + spec.cf/10;  p_min1 = p_raw_min + spec.cf/10\n",
+    "p_max1 = np.ceil(np.log10( np.nanmax( [np.nanmax(spec.EuEu), np.nanmax(spec.EvEv), np.nanmax(spec.EwEw)] ) )*5)/5+.5\n",
+    "# p_min1 = np.ceil(np.log10( np.nanmin( [np.nanmin(spec.EuEu), np.nanmin(spec.EvEv), np.nanmin(spec.EwEw)] ) )*5)/5+.5\n",
     "print(spec.str, \"[EE]\", spec.EuEu.shape, \"[frequency]\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_w_1d[0], \"kHz)\")\n",
     "print(\"unit_mode:\", unit_mode, \"  conversion factor:\", '{:.1f}'.format(spec.cf), \"[wave:\", '{:.1f}'.format(wave.cf),\n",
     "      \"]  MAX-min:\", '{:.1f}'.format(p_max1), '{:.1f}'.format(p_min1), \n",
-    "      \"  T-HF & T-RWI:\", T_HF, \"(\", data.T_HF_FPGA[n_time0//2], \")\", T_RWI, \"(\", data.T_RWI_CH1[n_time0//2], \")\")"
+    "      \"  T-HF & T-RWI:\", T_HF, \"(\", data.T_HF_FPGA[n_time1//2], \")\", T_RWI, \"(\", data.T_RWI_CH1[n_time1//2], \")\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41d54b4",
+   "metadata": {},
+   "source": [
+    "### Spectrum plot"
    ]
   },
   {
@@ -491,8 +553,6 @@
    "source": [
     "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
-    "if cal_mode == 1:\n",
-    "    p_max = p_max+2    \n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
@@ -546,8 +606,6 @@
    "outputs": [],
    "source": [
     "p_min = p_min1;   p_max = p_max1\n",
-    "if cal_mode == 1:\n",
-    "    p_max = p_max1+2    \n",
     "f_min = f_min0;   f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
@@ -584,8 +642,6 @@
    "source": [
     "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
-    "if cal_mode == 1:\n",
-    "    p_max = p_max+2    \n",
     "f_min = 0;       f_max = 5000\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
@@ -684,8 +740,18 @@
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\"); pp2.set_label(spec.str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(spec.str)\n",
     "\n",
+    "print( \"(\", num_1d[0],\")\", Epoch_1d[0], \"-\", \"(\", num_1d[-1],\")\", Epoch_1d[-1] )\n",
     "if time_mode == 1:\n",
-    "    xlim=[num_1d[0], num_1d[-1]]; ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
+    "    xlim=[num_1d[0], num_1d[-1]]; ax4.set_xlim(xlim) \n",
+    "else:\n",
+    "    if t_min0 == 0:\n",
+    "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
+    "    else:\n",
+    "        xlim=[t_min0, t_max0]\n",
+    "    # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    print(\"==>\", xlim)\n",
+    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=.03)\n",
     "plt.show\n",
@@ -705,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "id": "a12b1985",
    "metadata": {},
    "outputs": [],
@@ -726,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3ac2f9f0",
    "metadata": {},
    "outputs": [],
@@ -737,9 +803,9 @@
     "spec_sid3_EE_med  = np.zeros(n_freq_sid3)\n",
     "#\n",
     "Diff_sid3         = 1.0\n",
-    "mask_list0 = np.zeros(n_freq0);  mask_list1 = np.zeros(n_freq0);  mask_list2 = np.zeros(n_freq0);  mask_list3 = np.zeros(n_freq0)\n",
-    "EE_med_sid3       = np.zeros(n_freq0)   # threshold\n",
-    "EE_med_sid3_diff  = np.zeros(n_freq0)\n",
+    "mask_list0 = np.zeros(n_freq1);  mask_list1 = np.zeros(n_freq1);  mask_list2 = np.zeros(n_freq1);  mask_list3 = np.zeros(n_freq1)\n",
+    "EE_med_sid3       = np.zeros(n_freq1)   # threshold\n",
+    "EE_med_sid3_diff  = np.zeros(n_freq1)\n",
     "\n",
     "# SID-3 from SID-2\n",
     "for j in range(n_freq_sid3):\n",
@@ -754,7 +820,7 @@
     "    mask_list1[j0:j1+1]  = j1                       # Ch end\n",
     "    mask_list2[j0:j1+1]  = tbl_sid2_to_sid3[j][2]   # Ch width\n",
     "    mask_list3[j0:j1+1]  = j                        # Ch_SID03 \n",
-    "EE_med_sid3[j1:n_freq0]  = spec_sid3_EE_med[255]\n",
+    "EE_med_sid3[j1:n_freq1]  = spec_sid3_EE_med[255]\n",
     "#\n",
     "EE_dif_med = 10 * np.log10(EE_med) - 10 * np.log10(EE_med_sid3 * 10**(Diff_sid3/10.))"
    ]
@@ -814,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "fe30538a",
    "metadata": {},
    "outputs": [],
@@ -869,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "id": "e11dbaee",
    "metadata": {},
    "outputs": [],
