CAL:complex, Variable-type:64bit default

--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a619adb8",
    "metadata": {},
    "outputs": [],
@@ -141,9 +141,9 @@
     "# date='20240819'\n",
     "# date='20240820'\n",
     "# date='20240822'   # CAL\n",
-    "# date='20240823'\n",
+    "date='20240823'\n",
     "# date='20240909'\n",
-    "date='0'\n",
+    "# date='0'\n",
     "data_dir, data_name_list = juice_data.hf_sid3_datalist(date)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
